--- a/bootcamp/materials/3-spark-fundamentals/notebooks/Caching.ipynb
+++ b/bootcamp/materials/3-spark-fundamentals/notebooks/Caching.ipynb
@@ -104,9 +104,11 @@
     "\n",
     "val executionDate = \"2023-01-01\"\n",
     "\n",
-    "//Caching here should be < 5 GBs or used for broadcast join\n",
-    "//You need to tune executor memory otherwise it'll spill to disk and be slow\n",
-    "//Don't really try using any of the other StorageLevel besides MEMORY_ONLY\n",
+    "'''//Caching here should be < 5 GBs or used for broadcast join//\n",
+    "//You need to tune executor memory otherwise it'll spill to disk and be slow//\n",
+    "//Don't really try using any of the other StorageLevel besides MEMORY_ONLY// .cache() //'''\n",
+    "\n",
+    "\n",
     "val eventsAggregated = spark.sql(f\"\"\"\n",
     "  SELECT user_id, \n",
     "          device_id, \n",
