--- a/bootcamp/materials/3-spark-fundamentals/notebooks/event_data_pyspark.ipynb
+++ b/bootcamp/materials/3-spark-fundamentals/notebooks/event_data_pyspark.ipynb
@@ -414,17 +414,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "21a2f170",
+   "metadata": {
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    },
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "%%sql \n",
     "SELECT COUNT(1) FROM bootcamp.matches_bucketed.files"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
@@ -484,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
